# celer-sources

./: README.md
src/: CMakeLists.txt
src/Celer/Base/: Base.hpp  Exception.cpp  Exception.hpp
src/Celer/Core/Geometry/Math/: CMakeLists.txt  Color.hpp  EigenSystem.hpp  Matrix3x3.hpp  Matrix4x4.Graphics.hpp  Matrix4x4.hpp  Matrix4x4.inline.hpp  Quaternion.hpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.hpp
src/Celer/Core/Physics/: BoundingBox3.hpp
src/Celer/OpenGL/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  PixelBuffer.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture.cpp  Texture.hpp
src/Celer/OpenGLFramework/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.hpp  GLTexture.cpp  GLTexture.hpp  PixelBuffer.cpp  PixelBuffer.hpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp
src/Celer/Scene/: Camera.hpp
